--- a/manifest.json
+++ b/manifest.json
@@ -50,9 +50,10 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "wx9d59ebdf02075e51",
+        "appid" : "wx1e94d26c312553ae",
         "setting" : {
-            "urlCheck" : false
+            "urlCheck" : false,
+            "minified" : true
         },
         "usingComponents" : true
     },
